--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".presentation.views.activity_estadistica"
-    android:background="@color/background_green"
-    >
+    android:background="@color/background_green">
 
     <TextView
         android:id="@+id/estadisticas"
@@ -18,11 +17,11 @@
         android:text="@string/statistics"
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintStart_toEndOf="@+id/imageButton2"
+        app:layout_constraintStart_toEndOf="@+id/Volver"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton2"
+        android:id="@+id/Volver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -51,7 +50,7 @@
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+        app:layout_constraintTop_toBottomOf="@+id/Volver" />
 
     <TextView
         android:id="@+id/numPreguntasAcertadas"
