--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -42,7 +42,7 @@
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar_music" />
 
     <TextView
         android:id="@+id/textView8"
@@ -54,7 +54,7 @@
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar_sounds" />
 
     <TextView
         android:id="@+id/topic_selected"
@@ -65,7 +65,7 @@
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar_sounds" />
 
     <TextView
         android:id="@+id/textView7"
@@ -77,10 +77,10 @@
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />
+        app:layout_constraintTop_toBottomOf="@+id/seekBar_general_volume" />
 
     <SeekBar
-        android:id="@+id/seekBar"
+        android:id="@+id/seekBar_sounds"
         android:layout_width="304dp"
         android:layout_height="24dp"
         android:layout_marginTop="12dp"
@@ -95,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <SeekBar
-        android:id="@+id/seekBar2"
+        android:id="@+id/seekBar_general_volume"
         android:layout_width="304dp"
         android:layout_height="24dp"
         android:layout_marginTop="12dp"
@@ -110,7 +110,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <SeekBar
-        android:id="@+id/seekBar3"
+        android:id="@+id/seekBar_music"
         android:layout_width="304dp"
         android:layout_height="24dp"
         android:layout_marginTop="12dp"
@@ -135,7 +135,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSave"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
