--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.views.activity_estadistica"
+    tools:context=".presentation.statistics.view.StatisticsFragment"
     android:background="@color/background_green">
 
     <TextView
