--- a/app/src/main/res/layout/fragment_title_question.xml
+++ b/app/src/main/res/layout/fragment_title_question.xml
@@ -3,20 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment_title_question">
+    android:layout_height="wrap_content"
+    tools:context=".presentation.game.view.GameTitleFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@color/background_green">
 
         <TextView
             android:id="@+id/reto_Preguntas"
             android:layout_width="216dp"
             android:layout_height="34dp"
-            android:layout_marginTop="@dimen/header_margin_top"
-            android:layout_marginEnd="86dp"
             android:text="@string/question_challenge"
             android:textColor="@color/white"
             android:textSize="@dimen/header_font_size"
