Modificaciones varias en la logica del juego, sin terminar

--- a/app/src/main/res/layout/fragment_questions.xml
+++ b/app/src/main/res/layout/fragment_questions.xml
@@ -132,7 +132,7 @@
         </RadioGroup>
 
         <Button
-            android:id="@+id/Continuar"
+            android:id="@+id/btnContinue"
             android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="145dp"
