--- a/app/src/main/res/layout/activity_estadistica.xml
+++ b/app/src/main/res/layout/activity_estadistica.xml
@@ -17,11 +17,11 @@
         android:text="@string/statistics"
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintStart_toEndOf="@+id/Volver"
+        app:layout_constraintStart_toEndOf="@+id/btnBack"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/Volver"
+        android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -50,7 +50,7 @@
         android:textSize="@dimen/estadisticas_datos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Volver" />
+        app:layout_constraintTop_toBottomOf="@+id/btnBack" />
 
     <TextView
         android:id="@+id/numPreguntasAcertadas"
