Cambio de la logica del juego (a medias) y cambio del funcionamiento de la vista de ajustes

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -46,12 +46,9 @@
         android:id="@+id/GameContainerView"
         android:name="com.dds.theecogame.presentation.game.view.QuestionFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Linea"
         tools:layout="@layout/fragment_questions" />
 
